--- a/latex/implicit_pde_solutions.tex
+++ b/latex/implicit_pde_solutions.tex
@@ -1,6 +1,6 @@
 %!TEX root = karen.tex
 
-\chapter{Stokes}
+\chapter{Stokes (Incomplete)}
 
 This whole chapter is incomplete work. We started working toward stoke solutions on the unit sphere but it has yet to be completed. 
 
