--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -30,7 +30,7 @@
 \maketitle
 \makecommitteepage
 %%
-%\include{dedication}
+\include{dedication}
 %\include{acknowledgments}
 %%
 \tableofcontents
@@ -42,7 +42,7 @@
 %\input{notation_and_symbols}
 %\include{abbreviations}
 %%
-%\input{abstract.tex}
+\input{abstract.tex}
 
 \mainmatter
 
