--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1119,18 +1119,16 @@ Stable weight algorithms like Contour-Pad\'{e} \cite{Wright2003}, RBF-QR \cite{F
 
 
 
-
-\section{Metrics} 
-%TODO: T is time. 
-%TODO: speedup is measured as
-
-The following chapters consider the parallelization of RBF-FD on GPUs, across multiple CPUs, and across multiple GPUs. In each case we assert that the code produces the same results. However, the time to solution differs, so we make use of the speedup metric: 
-$$ 
-S_{p} =\ ^{T_{\text{serial}}} /_{T_{\text{parallel}}}
-$$
-to monitor improvement in performance.
-
-\authnote{finish}
+%
+%\section{Metrics} 
+%
+%The following chapters consider the parallelization of RBF-FD on GPUs, across multiple CPUs, and across multiple GPUs. In each case we assert that the code produces the same results. However, the time to solution differs, so we make use of the speedup metric: 
+%$$ 
+%S_{p} =\ ^{T_{\text{serial}}} /_{T_{\text{parallel}}}
+%$$
+%to monitor improvement in performance.
+%
+%\authnote{finish}
 
 %TODO: \authnote{Include efficiency}: 
 %$$ 
