--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -30,7 +30,7 @@
 \maketitle
 \makecommitteepage
 %%
-\include{dedication}
+%\include{dedication}
 %\include{acknowledgments}
 %%
 \tableofcontents
@@ -54,7 +54,7 @@
 %
 \include{explicit_pde_solutions}
 \include{implicit_pde_solutions}
-\include{publications}
+%\include{publications}
 %
 \include{conclusions}
 %
